# strata-bridge

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: dev-cli-release.yml  functional.yml
crates/asm-events/src/: client.rs
crates/bridge-exec/: Cargo.toml
crates/bridge-exec/src/: chain.rs  claim_funding.rs  config.rs  cpfp_adapters.rs  deposit.rs  fees.rs  lib.rs  output_handles.rs
crates/bridge-exec/src/graph/: common.rs  counterproof.rs  mod.rs  unstaking_burn.rs  utils.rs
crates/bridge-exec/src/stake/: staking.rs
crates/bridge-exec/tests/: cpfp_e2e.rs
crates/bridge-sm/: Cargo.toml
crates/bridge-sm/src/graph/: mod.rs  proof.rs
crates/bridge-sm/src/graph/handlers/: retry.rs
crates/bridge-sm/src/graph/tests/: mod.rs
crates/bridge-sm/src/graph/tests/contested/: process_bridge_proof.rs
crates/bridge-sm/src/graph/tests/handlers/: process_retry_tick.rs
crates/bridge-sm/src/graph/transitions/: contested.rs
crates/btc-tracker/src/: cpfp.rs  tx_driver.rs
crates/operator-wallet/: Cargo.toml
crates/operator-wallet/src/: any.rs  general.rs  lib.rs  wallet.rs
crates/operator-wallet/src/general/: fireblocks.rs  native.rs
crates/operator-wallet/src/general/fireblocks/: auth.rs  dto.rs  sign.rs  tx.rs
crates/orchestrator/src/events_classifier/: offchain.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: proof.rs
docker/: base.Dockerfile
docker/asm-runner/: Dockerfile
docker/secret-service/: Dockerfile
docker/strata-bridge/: Dockerfile
docker/vol/asm-runner/: asm-params-sample.json  config.toml
functional-tests/: constants.py  run_test.sh
functional-tests/factory/asm_rpc/: __init__.py  config_cfg.py
functional-tests/factory/common/: asm_params.py
functional-tests/rpc/: asm_types.py  types.py
functional-tests/tests/slashing/: fn_bridge_proof_timeout.py  fn_counterproof_ack.py
functional-tests/utils/: stake.py
guest-builder/sp1/guest-bridge-proof/: Cargo.toml
guest-builder/sp1/stub/: asm-params.json
