[workspace]
resolver = "2"

members = [
  "crates/algebra",
  "crates/asm-events",
  "crates/bridge-exec",
  "crates/bridge-sm",
  "crates/btc-tracker",
  "crates/common",
  "crates/connectors",
  "crates/db",
  "crates/key-deriv",
  "crates/memory_pprof",
  "crates/mosaic-client",
  "crates/mosaic-client-api",
  "crates/operator-wallet",
  "crates/orchestrator",
  "crates/p2p-service",
  "crates/p2p-types",
  "crates/primitives",
  "crates/rpc",
  "crates/secret-service-client",
  "crates/secret-service-proto",
  "crates/secret-service-server",
  "crates/tx-graph",

  # binaries listed separately
  "bin/strata-bridge",
  "bin/dev-cli",
  "bin/secret-service",
  "bin/proof-datatool",

  # test utilities
  "crates/test-utils",

  # proofs
  "crates/proofs/common",
  "crates/proofs/bridge-proof",
  "crates/proofs/bridge-counterproof",

  # SP1 guest builder
  "guest-builder/sp1",
]

default-members = ["bin/strata-bridge", "bin/dev-cli"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "deny"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.missing_docs = "deny"
rust.unsafe_op_in_unsafe_fn = "deny"
rustdoc.all = "deny"
clippy.missing_const_for_fn = "deny"

[workspace.dependencies]
# deps in this workspace
algebra = { path = "crates/algebra" }
btc-tracker = { path = "crates/btc-tracker" }
memory_pprof = { path = "crates/memory_pprof" }
operator-wallet = { version = "0.1.0", path = "crates/operator-wallet" }
secret-service-client = { path = "crates/secret-service-client" }
secret-service-proto = { path = "crates/secret-service-proto" }
secret-service-server = { path = "crates/secret-service-server" }
strata-bridge-asm-events = { path = "crates/asm-events" }
strata-bridge-common = { path = "crates/common" }
strata-bridge-connectors = { path = "crates/connectors" }
strata-bridge-counterproof = { path = "crates/proofs/bridge-counterproof" }
strata-bridge-db = { path = "crates/db" }
strata-bridge-exec = { path = "crates/bridge-exec" }
strata-bridge-key-deriv = { path = "crates/key-deriv" }
strata-bridge-orchestrator = { path = "crates/orchestrator" }
strata-bridge-p2p-service = { path = "crates/p2p-service" }
strata-bridge-p2p-types = { path = "crates/p2p-types" }
strata-bridge-primitives = { path = "crates/primitives" }
strata-bridge-proof = { path = "crates/proofs/bridge-proof", default-features = false }
strata-bridge-proof-common = { path = "crates/proofs/common" }
strata-bridge-rpc = { path = "crates/rpc" }
strata-bridge-sm = { path = "crates/bridge-sm" }
strata-bridge-sp1-guest-builder = { path = "guest-builder/sp1" }
strata-bridge-test-utils = { path = "crates/test-utils" }
strata-bridge-tx-graph = { path = "crates/tx-graph" }
strata-mosaic-client = { path = "crates/mosaic-client" }
strata-mosaic-client-api = { path = "crates/mosaic-client-api" }

# Dependencies from alpenlabs/alpen pinned to commit 8589f8e (main @ 2026-06-18, alpen #1965 — coordinated rc26 / asm-alpha.14 / zkaleido-beta.5 bump)
strata-ol-bridge-types = { git = "https://github.com/alpenlabs/alpen.git", rev = "8589f8e8bc58e07183d5683b2a10b0c6748cb533" }

# Dependencies from alpenlabs/asm pinned to commit 31d88a4 (main — asm PR #155 squash-merged on top of v0.1-alpha.14, picks up the phantom-reorg / MohoState desync fix)
asm-storage = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-common = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-params = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-proof-impl = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-proto-bridge-v1 = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-proto-bridge-v1-txs = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-proto-checkpoint = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-proto-checkpoint-txs = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-proto-checkpoint-types = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-rpc = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-spec = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-asm-worker = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }
strata-test-utils-arb = { git = "https://github.com/alpenlabs/asm.git", rev = "31d88a4f49c87c26f4db3859810de10775234339" }

# Dependencies from alpenlabs/mosaic pinned to commit 0fc9ba8d (main @ 2026-04-20)
mosaic-common = { git = "https://github.com/alpenlabs/mosaic", rev = "0fc9ba8d2359c7509b8ebf65e8aa5d423704b505" }
mosaic-rpc-api = { git = "https://github.com/alpenlabs/mosaic", rev = "0fc9ba8d2359c7509b8ebf65e8aa5d423704b505" }
mosaic-rpc-types = { git = "https://github.com/alpenlabs/mosaic", rev = "0fc9ba8d2359c7509b8ebf65e8aa5d423704b505" }

# Dependencies from alpenlabs/strata-common
strata-btc-types = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-codec = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-crypto = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-identifiers = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }
strata-predicate = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26", features = [
  # strata-common renamed `all` -> `all-verifiers` and dropped serde/borsh from
  # its default set; list them explicitly to preserve the pre-bump feature set.
  "all-verifiers",
  "serde",
  "borsh",
] }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc26" }

strata-p2p = { git = "https://github.com/alpenlabs/strata-p2p.git", tag = "v0.3.7", features = [
  "quic",
  "request-response",
  "gossipsub",
], default-features = false }

# Dependencies from alpenlabs/ssz-gen
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }

# Dependencies from alpenlabs/moho
moho-recursive-proof = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.9" }
moho-runtime-interface = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.9" }
moho-types = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.9" }

# Dependencies from alpenlabs/zkaleido
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.5" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.5" }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.5" }
zkaleido-sp1-host = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.5" }

# external deps
alloy = { version = "2.0.4", features = ["full", "node-bindings"] }
alloy-signer = "2.0.4"
anyhow = "1.0.102"
arbitrary = { version = "1.4.2", features = ["derive"] }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1.81"
bdk_bitcoind_rpc = "0.18.0"
bdk_wallet = "1.1.0"
bincode = "1.3.3"
blake3 = "1.8.3"
# TODO: <https://alpenlabs.atlassian.net/browse/STR-2658>
# Update `btc-tracker` and `tx-driver` tests when upgrading `bitcoin` to >=0.33.0.
bitcoin = { version = "0.32.9", features = ["rand-std", "serde"] }
bitcoin-bosd = { git = "https://github.com/alpenlabs/bitcoin-bosd", tag = "v0.11.0", features = [
  "address",
] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoincore-rpc = "0.19.0"
bitcoind-async-client = { version = "0.11.0", features = ["29_0"] }
borsh = { version = "1.6.1", features = ["derive"] }
cfg-if = "1.0"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["cargo", "derive", "env"] }
corepc-node = { version = "0.12.0", features = ["29_0"] }
ed25519-dalek = { version = "2.2.0", features = ["zeroize"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client", default-features = false, features = [
  "blocking-https-rustls",
  "async-https-rustls",
] }
# TODO: <https://alpenlabs.atlassian.net/browse/STR-2659>
# Upgrade to foundationdb 0.11.0 once released.
foundationdb = { git = "https://github.com/foundationdb-rs/foundationdb-rs", rev = "7e02f866ff08153f4309a429fc74515c77ea8f07", features = [
  "fdb-7_3",
] }
futures = "0.3.32"
hex = { version = "0.4.3", features = ["serde"] }
hkdf = "0.12.4"
indexmap = "2.13.0"
jsonrpsee = "0.26.0"
libp2p = { version = "0.56.0", features = [
  "noise",
  "gossipsub",
  "tcp",
  "request-response",
  "tokio",
  "secp256k1",
  "macros",
  "ping",
  "yamux",
  "identify",
] }
libp2p-identity = { version = "0.2.12", features = ["ed25519"] }
miniscript = "12.3.0"
# NOTE: (@Rajil1213) Using an alpenlabs fork that bumps serdect 0.2 → 0.3 to fix a
# serialize/deserialize mismatch in non-human-readable binary formats (e.g.
# postcard). Upstream musig2 ≥0.3.0 ships serdect 0.3 natively, but requires
# secp256k1 0.31 which conflicts with bitcoin 0.32's secp256k1 0.29. This fork
# can be dropped once bitcoin 0.33 (secp256k1 ≥0.31) is released and adopted by
# the workspace and its transitive dependencies (alpen, BitVM, bdk, etc.).
k256 = { version = "0.13.4", features = ["schnorr"] }
musig2 = { git = "https://github.com/alpenlabs/musig2", branch = "fix/deserialization-mismatch", features = [
  "serde",
  "rand",
] }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
postcard = { version = "1.1.3", features = ["alloc"] }
proptest = "1.11.0"
proptest-derive = "0.5.1"
quinn = "0.11.9"
rand = "0.8.5"
rkyv = "0.8.16"
rustls-pemfile = "2.2.0"
secp256k1 = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = { version = "1.0", default-features = false, features = [
  "alloc",
  "raw_value",
] }
serial_test = "3.4.0"
sha2 = "0.10"
sled = "0.34.7"
sp1-sdk = "6.2.0"
sp1-verifier = "6.2.0"
tempfile = "3.23.0"

# TODO: <https://alpenlabs.atlassian.net/browse/STR-2660>
# Update this dependency after the required upstream changes are merged.
terrors = { version = "0.3.2", git = "https://github.com/alpenlabs/terrors", features = [
  "rkyv_32",
  "rkyv_bytecheck",
] }
thiserror = "2.0.3"
tokio = { version = "1.52", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }

toml = "0.8.20"
tracing = "0.1.44"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[patch.crates-io]
# See NOTE on musig2 in [workspace.dependencies] above.
musig2 = { git = "https://github.com/alpenlabs/musig2", branch = "fix/deserialization-mismatch" }

# This is needed for custom build of SP1
[profile.release.build-override]
opt-level = 3
