[package]
name = "strata-bridge-exec"
version = "0.1.0"
edition = "2024"
description = "Executors for the Strata Bridge"

[lints]
workspace = true

[dependencies]
algebra.workspace = true
btc-tracker.workspace = true
operator-wallet.workspace = true
secret-service-client.workspace = true
secret-service-proto.workspace = true
strata-bridge-connectors.workspace = true
strata-bridge-counterproof.workspace = true
strata-bridge-db.workspace = true
strata-bridge-p2p-service.workspace = true
strata-bridge-p2p-types.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof.workspace = true
strata-bridge-proof-common.workspace = true
strata-bridge-sm.workspace = true
strata-bridge-tx-graph.workspace = true

strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-bridge-v1-txs.workspace = true
strata-asm-rpc = { workspace = true, features = ["client"] }
strata-codec.workspace = true
strata-crypto.workspace = true
strata-l1-txfmt.workspace = true
strata-mosaic-client-api.workspace = true
zkaleido.workspace = true
zkaleido-sp1-groth16-verifier = { workspace = true, optional = true }

async-trait.workspace = true
bdk_wallet.workspace = true
bitcoin.workspace = true
bitcoin-bosd = { workspace = true, features = ["address"] }
bitcoind-async-client.workspace = true
borsh.workspace = true
foundationdb.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["client"] }
musig2.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
ssz.workspace = true
terrors.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
bdk_bitcoind_rpc.workspace = true
corepc-node.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
toml.workspace = true
wiremock.workspace = true

[features]
default = []
sp1 = [
  "strata-bridge-proof/sp1",
  "strata-bridge-counterproof/sp1",
  "dep:zkaleido-sp1-groth16-verifier",
]
