[package]
name = "strata-bridge-sm"
version = "0.1.0"
edition = "2024"
description = "State machines for the Strata Bridge"

[lints]
workspace = true

[dependencies]
strata-bridge-connectors.workspace = true
strata-bridge-p2p-types.workspace = true
strata-bridge-primitives.workspace = true
strata-bridge-proof.workspace = true
strata-bridge-tx-graph.workspace = true
strata-mosaic-client-api.workspace = true

strata-asm-common.workspace = true
strata-asm-proto-bridge-v1-txs.workspace = true
strata-codec.workspace = true
strata-l1-txfmt.workspace = true
strata-predicate.workspace = true

bitcoin.workspace = true
bitcoin-bosd.workspace = true
musig2.workspace = true
serde.workspace = true
serde-big-array.workspace = true
ssz.workspace = true
thiserror.workspace = true
tracing.workspace = true
zkaleido.workspace = true

[dev-dependencies]
strata-bridge-test-utils.workspace = true

musig2.workspace = true
proptest.workspace = true
secp256k1.workspace = true
