[package]
edition = "2021"
name = "strata-bridge-primitives"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-crypto.workspace = true
strata-identifiers.workspace = true

algebra = { path = "../algebra", default-features = false }
anyhow.workspace = true
arbitrary.workspace = true
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoin-bosd.workspace = true
bitcoin-script.workspace = true
futures = { workspace = true, optional = true }
hex.workspace = true
libp2p-identity.workspace = true
miniscript.workspace = true
musig2 = { workspace = true, features = ["serde"] }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rkyv.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["async", "proptest"]
async = ["dep:tokio", "dep:futures", "algebra/async"]
proptest = ["dep:proptest", "dep:proptest-derive", "algebra/proptest"]
